Fix import tests